fix(select): lower `z-index` of listbox container

--- a/elements/rh-select/rh-select.css
+++ b/elements/rh-select/rh-select.css
@@ -73,7 +73,7 @@
 
 #outer.expanded #listbox-container {
   opacity: 1;
-  z-index: 9999;
+  z-index: 1000;
 }
 
 #listbox {
